--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </div>
     </header>        
     <main>
+        <!--Hero section-->
         <section>
             <div class="conteiner conteiner--hero">
-                <!--Hero section-->
                 <div class="sidebar">
                     <ul class="network__list network__list--hero">
                         <li class="network__item network__item--insta">
@@ -60,6 +60,20 @@
                     <p class="hero__slogan">A hair salon for men in Kyiv</p>
                     <h1 class="hero__title">BarberShop</h1>
                     <p class="hero__text">We are experts in trendy men's haircuts. <br>We work quickly, carefully and with style.</p>
+                </div>
+                <div class="menu__wrapper">
+                    <button class="menu" type="menu">
+                        <svg width="18" height="30">
+                            <use href="./images/icons.svg#icon-burger-menu"></use>
+                        </svg>
+                        <svg  class="menu__active" width="18" height="30">
+                            <use href="./images/icons.svg#icon-menu-hover"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="slider__wrapper">
+                    <button class="slider__control slider__control--prev" type="button">Back</button>
+                    <button class="slider__control slider__control--next" type="button">Forward</button>
                 </div>
             </div>
         </section>
@@ -349,14 +363,25 @@
                         <address class="address">
                             <ul class="address__list">
                                 <li class="address__item">
-                                    <a class="address__link address__link--map" href="https://goo.gl/maps/HFi6JgGy3GjAzjrv8" rel="noopener nofollow noreferrer">st. Vasilkovaya, 7A
-                                        Kiev, 08132</a>
+                                    <a class="address__link address__link--map" href="https://goo.gl/maps/HFi6JgGy3GjAzjrv8" rel="noopener nofollow noreferrer">
+                                        <svg class="address__svg" width="24" height="24">
+                                            <use href="./images/icons.svg#icon-map-pin"></use>
+                                        </svg>
+                                        <span>Vasilkovaya, 7A <br>Kiev, 08132</span></a>
                                 </li>
                                 <li class="address__item">
-                                    <a class="address__link address__link--tel" href="tel:+380441111111">+38 044 111 11 11</a>
+                                    <a class="address__link address__link--tel" href="tel:+380441111111">
+                                        <svg class="address__svg" width="24" height="24">
+                                            <use href="./images/icons.svg#icon-phone"></use>
+                                        </svg>
+                                        +38 044 111 11 11</a>
                                 </li>
                                 <li class="address__item">
-                                    <a class="address__link address__link--mail" href="mailto:barbershop@email.com">barbershop@email.com</a>
+                                    <a class="address__link address__link--mail" href="mailto:barbershop@email.com">
+                                        <svg class="address__svg" width="24" height="24">
+                                            <use href="./images/icons.svg#icon-mail"></use>
+                                        </svg>
+                                        barbershop@email.com</a>
                                 </li>
                             </ul>
                         </address>
