added buttons for slider

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </button>
                 </div>
                 <div class="slider__wrapper">
-                    <button class="slider__control slider__control--prev" type="button">Back</button>
+                    <button class="slider__control" type="button">Back</button>
                     <button class="slider__control slider__control--next" type="button">Forward</button>
                 </div>
             </div>
